--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,99 @@
 // Navigation Styles here
+
+// header{
+//     display: flex;
+//     justify-content: center;
+//     align-content: center;
+
+//     .top {
+//         display: flex;
+//         justify-content: space-between;
+//         width: 800px;
+
+//         .header {
+//            width: 30%; 
+//         }
+//         nav {
+//             width: 50%;
+//         }
+//     }
+// }
+
+
+
+
+
+header {
+    display: flex;
+    // justify-content: center;
+    align-items: baseline;
+    // align-content: center;
+    // width: 100%;
+    @media @mobile {
+      flex-wrap: wrap;
+    //   flex-direction: column;
+    }
+    .header {
+    //   order: -1;
+    //   display: block;
+    //   align-content: center;
+    display: flex;
+    width: 60%;
+    // } 
+    }
+    nav {
+        display: inline-block;
+        margin-left: 62px;
+        width: 50%;
+        justify-content: flex-end;
+        a {
+            // float: right;
+            // justify-content: flex-end; 
+            // flex-direction: row;
+            // display: inline-block;
+        }
+    }
+}
+
+
+
+// nav {
+//     // margin-left: 62px;
+//     // padding-bottom: 30px;
+//     width: 50%;
+//     display: flex;
+//     justify-content: flex-end;
+//     a {
+//    margin: 0 10px;
+//    display: flex;
+//    justify-content: flex-end;
+//    @media @mobile {
+//         width: 100%;
+//         // .center-nav();
+//         justify-content: space-between;
+//         // display: block;
+//         margin:0 50px;
+//         // padding: 0;
+//    }
+// }
+// }
+    // a {
+    //     // float: right;
+    //     margin-left: 0px;
+    //     font-size: 2rem;
+    //     color: black;
+    //     text-decoration: none;
+
+    //     @media @mobile {
+    //         width: 100%;
+    //         justify-content: space-between;
+    //     }
+    // }
+        // .first-anchor {
+        //     margin-right: 50%;
+        // }
+        header nav a:hover {
+            text-decoration: underline;
+            color: rgb(rgb(21, 129, 97));
+        }
+      
