--- a/css/index.css
+++ b/css/index.css
@@ -168,28 +168,53 @@ img {
   width: 100%;
   margin: 0 auto;
 }
-header {
+nav {
+  width: 100%;
+  margin: 10px 0;
   display: flex;
-  align-items: baseline;
+  justify-content: flex-end;
+  align-items: center;
 }
 @media ( max-width: 500px ) {
-  header {
-    flex-wrap: wrap;
+  nav {
+    flex-direction: column;
   }
 }
-header .header {
-  display: flex;
-  width: 60%;
-}
-header nav {
-  display: inline-block;
-  margin-left: 62px;
+nav h1 {
+  justify-content: flex-start;
   width: 50%;
-  justify-content: flex-end;
 }
-header nav a:hover {
+@media ( max-width: 500px ) {
+  nav h1 {
+    margin-bottom: 15px;
+  }
+}
+nav div {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+@media ( max-width: 500px ) {
+  nav div {
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+  }
+}
+nav div a {
+  color: black;
+  text-decoration: none;
+  font-size: 1.5rem;
+  word-spacing: 5px;
+}
+nav div header nav a:hover {
   text-decoration: underline;
   color: #158161;
+}
+header {
+  border-top: 2px dashed silver;
 }
 .footer {
   width: 100%;
@@ -201,6 +226,9 @@ header nav a:hover {
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
+}
+.box {
+  padding: 0 50px;
 }
 .home .content-section {
   margin: 30px 0;
@@ -225,7 +253,7 @@ header nav a:hover {
 }
 @media ( max-width: 500px ) {
   .home .content-section .text-content {
-    width: 100%;
+    width: 85%;
     text-align: justify;
     flex-wrap: wrap;
   }
@@ -262,9 +290,10 @@ header nav a:hover {
 }
 @media ( max-width: 500px ) {
   .home .inverse-content .text-content {
-    width: 100%;
-    text-align: justify;
+    width: 85%;
     flex-wrap: wrap;
+    align-content: center;
+    justify-content: space-around;
   }
 }
 .home .inverse-content .img-content {
@@ -286,6 +315,7 @@ header nav a:hover {
 }
 @media ( max-width: 500px ) {
   .home .content-destination {
+    width: 100%;
     flex-direction: column;
     flex-wrap: wrap;
     align-content: space-between;
@@ -309,7 +339,8 @@ header nav a:hover {
 }
 @media ( max-width: 500px ) {
   .home .content-pick .destination {
-    max-width: 100%;
+    width: 100%;
+    flex-direction: column;
   }
 }
 .btn {
@@ -322,7 +353,9 @@ header nav a:hover {
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 5px;
   background-color: #19856A;
   color: white;
   width: 400px;
+  height: 3rem;
 }
