--- a/css/index.css
+++ b/css/index.css
@@ -147,7 +147,7 @@ h1 {
   font-size: 4rem;
 }
 h2 {
-  font-size: 3.2rem;
+  font-size: 2.4rem;
   padding-bottom: 10px;
 }
 h4 {
@@ -158,6 +158,7 @@ p {
   line-height: 1.5;
   font-size: 1.6rem;
   padding-bottom: 10px;
+  color: #212529;
 }
 img {
   max-width: 100%;
@@ -187,6 +188,36 @@ nav h1 {
 @media ( max-width: 500px ) {
   nav h1 {
     margin-bottom: 15px;
+    margin-right: -30px;
+  }
+}
+nav .logo {
+  -webkit-animation: fade-in 0.2s linear infinite alternate;
+  -moz-animation: fade-in 0.2s linear infinite alternate;
+  animation: fade-in 0.2s linear infinite alternate;
+}
+@-moz-keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
 nav div {
@@ -209,12 +240,16 @@ nav div a {
   font-size: 1.5rem;
   word-spacing: 5px;
 }
-nav div header nav a:hover {
+nav div a:hover {
   text-decoration: underline;
-  color: #158161;
+  color: #17A2B8;
 }
 header {
   border-top: 2px dashed silver;
+}
+.welcome {
+  margin-top: 2rem;
+  font-size: 2.4rem;
 }
 .footer {
   width: 100%;
@@ -230,11 +265,15 @@ header {
 .box {
   padding: 0 50px;
 }
+.home .container home {
+  border-top: 2px dashed #C0C0C0;
+}
 .home .content-section {
   margin: 30px 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  color: #212529;
 }
 @media ( max-width: 500px ) {
   .home .content-section {
@@ -250,6 +289,7 @@ header {
   padding-right: 1%;
   flex-wrap: wrap;
   padding-top: 10px;
+  color: #212529;
 }
 @media ( max-width: 500px ) {
   .home .content-section .text-content {
@@ -287,6 +327,7 @@ header {
 .home .inverse-content .text-content {
   padding-left: 1%;
   padding-right: 0;
+  color: #212529;
 }
 @media ( max-width: 500px ) {
   .home .inverse-content .text-content {
@@ -354,8 +395,8 @@ header {
   justify-content: center;
   align-items: center;
   border-radius: 5px;
-  background-color: #19856A;
-  color: white;
+  background-color: #17A2B8;
+  color: #FFFFFF;
   width: 400px;
   height: 3rem;
 }
