--- a/less/global.less
+++ b/less/global.less
@@ -19,7 +19,8 @@ h1 {
 }
 
 h2 {
-  font-size: 3.2rem;
+  // font-size: 3.2rem;
+  font-size: 2.4rem;
   padding-bottom: 10px;
 }
 
@@ -32,6 +33,7 @@ p {
   line-height: 1.5;
   font-size: 1.6rem;
   padding-bottom: 10px;
+  color: @shark;
 }
 
 img {
