--- a/less/home-page.less
+++ b/less/home-page.less
@@ -4,11 +4,16 @@
 
 .home {
 
+  .container home {
+      // padding: 90px 0 10px;
+      border-top: 2px dashed @navigation-border;
+  }
   .content-section {
     margin: 30px 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    color: @shark;
 
     @media @mobile {
       Flex-direction: column;
@@ -16,15 +21,14 @@
       justify-content: space-around;
       align-content: space-between;
       width: 480px;
-      // height: 400px;
     }
-   
-    
+  
     .text-content {
       width: 48%;
       padding-right: 1%;
       flex-wrap: wrap;
       padding-top: 10px;
+      color: @shark;
 
       @media @mobile {
         width: 85%;
@@ -50,7 +54,7 @@
       }
     }
   }
-
+//reversed the second photo and text
   .inverse-content {
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
@@ -62,6 +66,7 @@
     .text-content {
       padding-left: 1%;
       padding-right: 0;
+      color: @shark;
 
       @media @mobile {
         width: 85%;
@@ -84,7 +89,6 @@
       justify-content: center;
       flex-wrap: wrap;
       align-items: center;
-
       }
     }
   }
@@ -126,16 +130,6 @@
       @media @mobile {
         width: 100%;
         flex-direction: column;
-        
-        // justify-content: space-around;
-        // height: 200px;
-        // display: flex;
-        // flex-wrap: wrap;
-        // align-content: center;
-        // justify-content: center;
-        // align-items: center;
-          // align-content: space-between;
-          // flex-flow: column;
       }
     }
   }
@@ -151,8 +145,8 @@
   .button {
       .custom-button();
       border-radius: 5px;
-      background-color: #19856A;
-      color: white;
+      background-color: @button-bg;
+      color: @main-bg;
       width: 400px;
       height: 3rem;
   }
