--- a/less/navigation.less
+++ b/less/navigation.less
@@ -23,9 +23,22 @@ nav {
         width: 50%;
         @media @mobile {
             margin-bottom: 15px;
+            margin-right: -30px;
             // border: 3px solid red;
         }
     }
+
+    //Animation//
+    .logo {
+	
+        .keyframes(fade-in;{
+            0% { opacity: 0; }
+            100% { opacity: 1; }
+            });
+    
+        .animation(fade-in 0.2s linear infinite alternate)
+    }
+
     div {
         width: 50%;
         height: 100%;
@@ -46,9 +59,9 @@ nav {
             font-size: 1.5rem;
             word-spacing: 5px;
         }
-        header nav a:hover {
+        a:hover {
             text-decoration: underline;
-            color: rgb(rgb(21, 129, 97));
+            color: @eastern-blue;
         }
     }
 }
@@ -56,4 +69,9 @@ nav {
 header {
     // width: 100%;
     border-top: 2px dashed silver;
+}
+
+.welcome {
+    margin-top: 2rem;
+    font-size: 2.4rem;
 }
